@@ -8,9 +8,6 @@ ffmpegfs TODOs
   simply repackage it to a mp4 container without recoding.
 * Improve Libav compatibility (maybe it is possible to use Libav 11+?).
 * Add album art support.
-* Improve recoding detection. Currently a file is recoded if the source
-  file size or timestamp changes, but not if different encoding options
-  are selected (e.g. a different bitrate).
 * DVD support: Detect IFO files and list separate DVD chapters or programs
   as separate files. Currently VOB files will be transcodes as is not
   allowing to access anything reasonable without seeking the stream.
