@@ -31,6 +31,11 @@ Mount IN_DIR on OUT_DIR, converting audio/video files to *mp4*, *mp3*, *ogg* or 
     *mp4*, *mp3*, *ogg* or *wav*. To stream videos, 
     *mp4* or *ogg* must be selected.
     Default: *mp4*
+*--target*=NAME, *-otarget*=NAME::
+    Set optimisations for target browsers. Currently selectable:
+    UNSPECIFIC no specific optimisations
+    EDGE       optimise for MS Edge and Internet Explorer
+    Default: UNSPECIFIC
 
 === Audio Options ===
 *--audiobitrate*=BITRATE, *-o audiobitrate*=BITRATE::
